crates/panache-parser/tests/snapshots/yaml__yaml_suite_4JVG.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 4JVG
input: "top1: &node1\n  &k1 key1: val1\ntop2: &node2\n  &v2 val2\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_MULTIPLE_ANCHORS_ON_NODE:node cannot have multiple anchors@45..48]
