crates/panache-parser/tests/snapshots/yaml__yaml_suite_5LLU.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 5LLU
input: "block scalar: >\n \n  \n   \n invalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_INDENT:block scalar leading empty line is more indented than its content@18..19]
