crates/panache-parser/tests/snapshots/yaml__yaml_suite_6M2F.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 6M2F
input: "? &a a\n: &b b\n: *a\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
