crates/panache-parser/tests/snapshots/yaml__yaml_suite_NKF9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: NKF9
input: "---\nkey: value\n: empty key\n---\n{\n key: value, : empty key\n}\n---\n# empty key and value\n:\n---\n# empty key and value\n{ : }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
