crates/panache-parser/tests/snapshots/yaml__yaml_suite_RXY3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: RXY3
input: "---\n'\n...\n'\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_UNTERMINATED_QUOTED_SCALAR:unterminated quoted scalar@4..6]
