crates/panache-parser/tests/snapshots/yaml__yaml_suite_S98Z.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: S98Z
input: "empty block scalar: >\n \n  \n   \n # comment\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_INDENT:block scalar leading empty line is more indented than its content@24..25]
