crates/panache-parser/tests/snapshots/yaml__yaml_suite_SBG9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: SBG9
input: "{a: [b, c], [d, e]: f}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
